// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group By Option should correctly show domain in the select options when "Only Top Domains" is not checked 1`] = `
Array [
  Object {
    "label": "Aggregate Total",
    "value": "aggregate",
  },
  Object {
    "label": "Recipient Domain",
    "value": "domain",
  },
  Object {
    "label": "Sending Domain",
    "value": "sending-domain",
  },
  Object {
    "label": "Campaign",
    "value": "campaign",
  },
  Object {
    "label": "Template",
    "value": "template",
  },
  Object {
    "label": "Sending IP",
    "value": "sending-ip",
  },
  Object {
    "label": "IP Pool",
    "value": "ip-pool",
  },
]
`;

exports[`Group By Option should correctly show watched domain in the select options when "Only Top Domains" is checked 1`] = `
Array [
  Object {
    "label": "Aggregate Total",
    "value": "aggregate",
  },
  Object {
    "label": "Recipient Domain",
    "value": "watched-domain",
  },
  Object {
    "label": "Sending Domain",
    "value": "sending-domain",
  },
  Object {
    "label": "Campaign",
    "value": "campaign",
  },
  Object {
    "label": "Template",
    "value": "template",
  },
  Object {
    "label": "Sending IP",
    "value": "sending-ip",
  },
  Object {
    "label": "IP Pool",
    "value": "ip-pool",
  },
]
`;

exports[`Group By Option should render correctly 1`] = `
<Grid>
  <Grid.Column
    lg={4}
    md={5}
    xs={12}
  >
    <Select
      disabled={false}
      label="Group By"
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Aggregate Total",
            "value": "aggregate",
          },
          Object {
            "label": "Recipient Domain",
            "value": "watched-domain",
          },
          Object {
            "label": "Sending Domain",
            "value": "sending-domain",
          },
          Object {
            "label": "Campaign",
            "value": "campaign",
          },
          Object {
            "label": "Template",
            "value": "template",
          },
          Object {
            "label": "Sending IP",
            "value": "sending-ip",
          },
          Object {
            "label": "IP Pool",
            "value": "ip-pool",
          },
        ]
      }
      value="watched-domain"
    />
  </Grid.Column>
  <Grid.Column
    lg={3}
    lgOffset={5}
    md={4}
    mdOffset={3}
    xs={12}
  >
    <div
      className="TopDomainsCheckbox"
    >
      <Checkbox
        checked={true}
        disabled={false}
        id="watchedDomains"
        label="Top Domains Only"
        onChange={[Function]}
      />
    </div>
  </Grid.Column>
</Grid>
`;

exports[`Group By Option should render subaccount option 1`] = `
Array [
  Object {
    "label": "Aggregate Total",
    "value": "aggregate",
  },
  Object {
    "label": "Recipient Domain",
    "value": "watched-domain",
  },
  Object {
    "label": "Sending Domain",
    "value": "sending-domain",
  },
  Object {
    "label": "Campaign",
    "value": "campaign",
  },
  Object {
    "label": "Template",
    "value": "template",
  },
  Object {
    "label": "Subaccount",
    "value": "subaccount",
  },
  Object {
    "label": "Sending IP",
    "value": "sending-ip",
  },
  Object {
    "label": "IP Pool",
    "value": "ip-pool",
  },
]
`;
